--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.couchbase.bootstrap-hosts=localhost
-spring.couchbase.bucket.name=_default
+spring.couchbase.bootstrap-hosts=cb-example.couchbase.svc.cluster.local
+spring.couchbase.bucket.name=cb-bucket
 spring.couchbase.bucket.user=Administrator
 spring.couchbase.bucket.password=password
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
