--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,11 @@
             <artifactId>java-client</artifactId>
             <version>${couchbase.version}</version>
         </dependency>
+		<dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-couchbase</artifactId>
+            <version>3.2.3.RELEASE</version>
+        </dependency>
 
 		<dependency>
             <groupId>io.springfox</groupId>
